--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-ejs": "^5.1.0",
     "gulp-file": "^0.4.0",
     "gulp-rename": "^2.0.0",
-    "marked": "^14.1.2"
+    "marked": "^14.1.2",
+    "pureimage": "^0.4.13"
   }
 }
