--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "dependencies": {
     "gray-matter": "^4.0.3",
-    "sharp": "^0.34.3",
-    "showdown": "^2.1.0"
+    "sharp": "^0.34.4",
+    "showdown": "^2.1.0",
+    "showdown-highlight": "^3.1.0"
   }
 }
